Included invisible character to fix dropdown-toggle button

--- a/src/main/resources/jsmart5/css/jsmart5.css
+++ b/src/main/resources/jsmart5/css/jsmart5.css
@@ -175,3 +175,6 @@
     margin-top: 0px;
 }
 
+.js5-btn-dropdown-toggle {
+    white-space: pre;
+}
